components/terraform/vpc.tf
# ======================================================================================================================
# Virtual Private Cloud
# ======================================================================================================================
# ===================================================================================================================
# VARIABLES
# ===================================================================================================================
variable "create_vpc" {
  description = "Creates a VPC"
  default     = false
}

variable "vpc_cidr" {
  type    = string
  default = ""
}

variable "vpc_dns_support" {
  type    = string
  default = false
}

variable "vpc_dns_hostnames" {
  type    = string
  default = false
}

# ===================================================================================================================
# RESOURCE CREATION
# ===================================================================================================================
# -------------------------------------------------------------------------------------------------------------------
# Create VPC for base network
# -------------------------------------------------------------------------------------------------------------------
resource "aws_vpc" "env_vpc" {
  count                = var.create_vpc ? 1 : 0
  cidr_block           = var.vpc_cidr
  enable_dns_support   = var.vpc_dns_support
  enable_dns_hostnames = var.vpc_dns_hostnames

  tags = merge(
    local.default_tags,
    {
      "Name" = "${local.name_prefix}-vpc"
    }
  )
}
